--- a/data/attraction.yml
+++ b/data/attraction.yml
@@ -5,15 +5,16 @@
 - :attr: title
   :headings:
   - 'Title'
-  :required: false
   :heading_required: true
 - :attr: date_standard
   :headings:
   - 'Date Standard'
+  :heading_required: true
 - :attr: date_as_written
   :headings:
   - 'Date as Written'
-- :attr: Headliner
+  :heading_required: true
+- :attr: headliner
   :headings:
   - 'headliner'
-# date as own thing... multiple dates?
+  :heading_required: true
