--- a/data/event.yml
+++ b/data/event.yml
@@ -1,58 +1,61 @@
 ---
-:sheet_name: Dante Alighieri
+:sheet_name: Show
 :sheet_position: 1
 :heading_type: column
 :attributes:
-- :attr: date_as_written
-  :headings:
-  - 'Date As Written'
-  :required: true
 - :attr: date_standard
   :headings:
   - 'Date Standard'
-  :required: true
-
-
+  :heading_required: true
+- :attr: date_as_written
+  :headings:
+  - 'Date As Written'
+  :heading_required: true
 
 - :attr: '@id'
   :headings:
   - 'Venue URI'
-  :required: true
+  :heading_required: true
 - :attr: venue_name
   :headings:
   - 'Venue Name'
-  :required: true
+  :heading_required: true
 - :attr: venue_identified_name
   :headings:
   - 'Venue Identified Name'
 - :attr: venue_location
   :headings:
   - 'Venue Address or Location'
-
+  :required: true
 
 
 - :attr: occasion_as_stated
   :headings:
   - 'Occasion As Stated'
+  :heading_required: true
 - :attr: occasion_type
   :headings:
   - 'Occasion Type'
-
+  :heading_required: true
 
 - :attr: organization
   :headings:
   - 'Organization'
+  :heading_required: true
 - :attr: manager_name
   :headings:
   - 'Manager'
+  :heading_required: true
 
-
-- :attr: price
-  :headings:
-  - 'Ticket Price'
 - :attr: price_as_written
   :headings:
+  - 'Ticket Price'
+  :heading_required: true
+- :attr: price
+  :headings:
   - 'Ticket Value'
+  :heading_required: true
 - :attr: ticket_location
   :headings:
   - 'Ticket Location'
+  :heading_required: true
