--- a/lib/playbills/data/additional_text.yml
+++ b/lib/playbills/data/additional_text.yml
@@ -5,12 +5,12 @@
 - :attr: advertisement
   :headings:
   - 'Advertisement'
-  :heading_required: true
+#  :heading_required: true
 - :attr: printer_publisher
   :headings:
   - 'Printer / Publisher'
-  :heading_required: true
+#  :heading_required: true
 - :attr: additional_other
   :headings:
   - 'Other'
-  :heading_required: true
+#  :heading_required: true
