--- a/lib/furness/furness_config.yml
+++ b/lib/furness/furness_config.yml
@@ -50,7 +50,7 @@
   - Actor/Character[65457]
 - :attr: actor_character_URI
   :headings:
-  - About/Character URI ######## Actor?
+  - About/Character URI
 - :attr: related_agent
   :headings:
   - Related Agent[65459]
@@ -112,82 +112,3 @@
 - :attr: image_view_description
   :headings:
   - Image View Description
-
-# Image
-#   Digital Facsimile
-#     Media URL
-#     SSID
-#     Filename
-#     Creation/Discovery Site
-#     ID Number
-#   Collection Object
-#     Creator
-#       Creator URI
-#     Title
-#       Title URI
-#     Description
-#       Description URI
-#     Actor/Character
-#     Actor/Character URI
-#     Related Agent
-#       Related Agent URI
-#     Play
-#     Date
-#     Date Range
-#     Earliest Date
-#     Latest Date
-#     Style/Period
-#     Materials/Techniques
-#     Measurements
-#     Artstor Classification
-#     Work Type
-#     Repository
-#     Subject
-#     Relationships
-#     Source
-#     Legacy Bibliography Number
-#     Donor Statement
-#     Image View Description
-
-
-
-
-
-
-#   Media URL
-#   SSID
-#   Filename
-#   Creation/Discovery Site
-#   ID Number
-#   Creator
-#   Creator URI
-#   Title
-#   Title URI
-#   Description
-#   Description URI
-#   Actor/Character
-#   Actor/Character URI
-#   Related Agent
-#   Related Agent URI
-#   Play
-#   Date
-#   Date Range
-#   Earliest Date
-#   Latest Date
-#   Style/Period
-#   Materials/Techniques
-#   Measurements
-#   Artstor Classification
-#   Work Type
-#   Repository
-#   Subject
-#   Relationships
-#   Source
-#   Legacy Bibliography Number
-#   Donor Statement
-#   Image View Description
-
-# - :attr: #{SNAKE_CASE[a]}
-#   :headings:
-#   - #{a}
-
